added fas fa-image

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ drift.load('izskvvhsx7wr');
                         <h4></h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="img/Pf/ipl.jpg" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="img/Pf/ipl.jpg" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/harshgeek4coder/IPL-Cricket-Match-Exploratory-Data-Analysis---EDA" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -419,7 +419,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Catalytic Originals Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/cato.png" data-gall="portfolioGallery" class="venobox" title="Catalytic Originals Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/cato.png" data-gall="portfolioGallery" class="venobox" title="Catalytic Originals Website"><i class="fas fa-images"></i></a>
                             <a href="https://pranjay-poddar.github.io/catalytic_originals/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -432,7 +432,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Google Clone Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/google.png" data-gall="portfolioGallery" class="venobox" title="Google Clone Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/google.png" data-gall="portfolioGallery" class="venobox" title="Google Clone Website"><i class="fas fa-images"></i></a>
                             <a href="https://pranjay-poddar.github.io/search/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -445,7 +445,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Preksha Website</h4>
                         <p>In Web Hackathon</p>
                         <div class="portfolio-links">
-                            <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="Preksha Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="Preksha Website"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/pranjay-poddar/Preksha" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -458,7 +458,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Portfolio Website</h4>
                         <p>Pranjay Poddar</p>
                         <div class="portfolio-links">
-                            <a href="projects images/pranjay.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/pranjay.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-images"></i></a>
                             <a href="https://pranjay-poddar.github.io/portfolio/index.html" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -471,7 +471,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Artdreamation Ecommerce Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/artdreamation.png" data-gall="portfolioGallery" class="venobox" title="Artdreamation Ecommerce Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/artdreamation.png" data-gall="portfolioGallery" class="venobox" title="Artdreamation Ecommerce Website"><i class="fas fa-images"></i></a>
                             <a href="https://pranjay-poddar.github.io/artdreamation/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -484,7 +484,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Portfolio Website</h4>
                         <p>Anurag Bajoria</p>
                         <div class="portfolio-links">
-                            <a href="projects images/anurag.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/anurag.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-images"></i></a>
                             <a href="https://pranjay-poddar.github.io/anurag_bajoria/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -498,7 +498,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Virtual Rube Goldberg Machine</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/rube.png" data-gall="portfolioGallery" title="Virtual Rube Goldberg Machine " class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/rube.png" data-gall="portfolioGallery" title="Virtual Rube Goldberg Machine " class="venobox"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/pranjay-poddar/dsa_asg4" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -512,7 +512,7 @@ drift.load('izskvvhsx7wr');
                         <h4>IWSC Student Chapter Portal</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal "class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal "class="venobox"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -528,7 +528,7 @@ drift.load('izskvvhsx7wr');
                         <p>Using HTML,CSS ,Javascript , I have designed a simple portfolio website .I have used some javascript based animations , like
                             WOW Animation JS And Particle Animation. </p>
                         <div class="portfolio-links">
-                            <a href="img/Pf/personal-portfolio-website-500x500.jpg" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="img/Pf/personal-portfolio-website-500x500.jpg" data-gall="portfolioGallery" class="venobox"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/harshgeek4coder/Simple-Portfolio-Website" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
