--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="manifest" href="./manifest.webmanifest">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171690017-1"></script>
-<script>
+
+<!-- pre loader ----------------->
+<!-- <script>
     function preloader() {
       var preloader = document.getElementById("preloader");
       preloader.style.opacity = "0";
@@ -17,7 +19,7 @@
       document.getElementById("site").style.opacity = "1";
     }
     window.onload = preloader;
-    </script>
+    </script> -->
 <script>
 	
 	
@@ -79,8 +81,9 @@ drift.load('izskvvhsx7wr');
 <!-- End of Async Drift Code -->
 
 </head>
-<div id="preloader" aria-busy="true" aria-label="Loading, Please Wait." role="progressbar"><i class="fas fa-user-astronaut" id="icon"></i>
-</div>
+<!-- pre-loader------------- -->
+<!-- <div id="preloader" aria-busy="true" aria-label="Loading, Please Wait." role="progressbar"><i class="fas fa-user-astronaut" id="icon"></i>
+</div> -->
 <body>
     
     <!--Particle Animation-->
