--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ drift.load('izskvvhsx7wr');
     <header id="header" class="header-top">
     <div class="conatiner">
      <div class="navbar navbar-inverse navbar-fixed-top navbar-fixed-width" role="navigation"></div>
-        <nav class="navbar navbar fixed-top navbar-expand-sm nav-menu" id="nav">
+        <nav class="navbar navbar fixed-top navbar-expand-md nav-menu" id="nav">
             <div class="container">
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarid">
             <span id="tc"><i class="fas fa-bars"></i></span>
@@ -110,6 +110,7 @@ drift.load('izskvvhsx7wr');
                 <li class="nav-item" ><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item" ><a class="nav-link" href="#experience">Experience</a></li>
                 <li class="nav-item" ><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item" ><a class="nav-link" href="#blogs">Blogs</a></li>
                 <li class="nav-item" ><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
             </div>
@@ -150,7 +151,7 @@ drift.load('izskvvhsx7wr');
         </div>
         <div class="row">
         <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200"  data-aos-easing="ease-in-out">
-            <img id="pic" src="img/me1.jpg" class="mx-auto d-block" alt="Responsive image">
+            <img id="pic" src="img/mecircle.png" class="mx-auto d-block" alt="Responsive image">
         </div>           
 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
          <h3>Profile </h3>
@@ -559,7 +560,7 @@ drift.load('izskvvhsx7wr');
 </section>
 <!--End Of Projects Section-->
 <!-- blog section starts  ------------------------------------------->
-<section id="projects" class="projects">
+<section id="blogs" class="projects">
     <div class="container">
     <div class="section-title">
             <h2>Blogs & White Papers</h2>
@@ -614,7 +615,7 @@ drift.load('izskvvhsx7wr');
 <section class="contact" id="contact">
 <div class="container" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
     <div class="section-title">
-        <h2 style="font-size: 160%"> Contact </h2>
+        <h2> Contact </h2>
         <p></p>
     </div>
     <div class="row mt-2"  >
@@ -686,21 +687,8 @@ drift.load('izskvvhsx7wr');
 <!--End Of Contacts Section-->
 <section class="thanks">
     <div class="container">
-<h2 class="typeh22">This Website Was  <span class="type1"></span></h2>
-      <script src="js/typed.js"></script>
-        <script>
-            var typed = new Typed('.type1', {
-            strings: ['Made with Love',
-                      'hardwork',
-                      'and dedication',
-                      'By Pranjay Poddar',
-             ],
-             typeSpeed: 60,
-             backSpeed: 30,
-             loop: true,
-             smartBackspace: true // Default value
-            });
-        </script>
+<h4 style="text-align: center; ">&copy2021 <span href="#about" style="color:#bc96e6; cursor: pointer;">Pranjay Poddar</span></h4>
+      
     </div>
 </section>
     <!--JQuery Plugins AND js Files-->
