corrected data atmos

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ drift.load('izskvvhsx7wr');
 
 <!--Contacts Section-->
 <section class="contact" id="contact">
-<div class="container" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+<div class="container" data-aos-easing="ease-in-out">
     <div class="section-title">
         <h2> Contact </h2>
         <p></p>
