--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="A CSE undergrad and a tech enthusiast who specialises in Cloud Computing. ">
     <meta name="keywords" content="Pranjay Poddar, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai">
     <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="./apple touch/72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="./apple touch/144.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171690017-1"></script>
 
