added todo list app in angular projects

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="Pranjay Poddar, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai">
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="./apple touch/72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="./apple touch/144.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./apple touch/72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./apple touch/144.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171690017-1"></script>
 
@@ -524,8 +524,22 @@ drift.load('izskvvhsx7wr');
                         <h4>IWSC Student Chapter Portal</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal "class="venobox"><i class="fas fa-images"></i></a>
+                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal" class="venobox"><i class="fas fa-images"></i></a>
                             <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                <div class="portfolio-wrap">
+                    <img src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
+                    <div class="portfolio-info">
+                        <h4>To-Do List App</h4>
+                        <p> </p>
+                        <div class="portfolio-links">
+                            <a href="projects images/todo.png" data-gall="portfolioGallery" title="To-Do List App" class="venobox"><i class="fas fa-images"></i></a>
+                            <a href="https://pranjay-poddar.github.io/To-Do-List-App/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
                 </div>
