disbled right click

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
     window.onload = preloader;
     </script> -->
 <script>
-	
-	
-//   document.addEventListener("contextmenu", function(e){
-//     e.preventDefault();
-// }, false);
-
+// right click disable---------start--------------------------
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+}, false);
+// right click disable---------end--------------------------
 
 	
 
