--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@ drift.load('izskvvhsx7wr');
                     <li data-filter="*" class="filter-active">All</li>
                     <li data-filter=".filter-web">Web</li>
                     <li data-filter=".filter-angular">Angular</li>
+                    <li data-filter=".filter-react">React</li>
                     <li data-filter=".filter-c">C/C++</li>
                     <!-- <li data-filter=".filter-python">Python</li> -->
-                    <li data-filter=".filter-js">Javascript</li>
                 </ul>
             </div>
         </div>
@@ -540,6 +540,19 @@ drift.load('izskvvhsx7wr');
             <!-- angular projects  -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                 <div class="portfolio-wrap">
+                    <img src="projects images/srm.png" class="img-fluid" alt="SRM UNIVERSITY Redesigned Website">
+                    <div class="portfolio-info">
+                        <h4>SRM UNIVERSITY Redesigned Website</h4>
+                        <p> </p>
+                        <div class="portfolio-links">
+                            <a href="projects images/srm.png" data-gall="portfolioGallery" title="SRM UNIVERSITY Redesigned Website" class="venobox"><i class="fas fa-images"></i></a>
+                            <a href="#" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                <div class="portfolio-wrap">
                     <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
                     <div class="portfolio-info">
                         <h4>IWSC Student Chapter Portal</h4>
@@ -581,7 +594,7 @@ drift.load('izskvvhsx7wr');
                 </div>
             </div> -->
             <!-- javascript projects eda  -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-react">
                 <div class="portfolio-wrap">
                     <img src="projects images/development.png" class="img-fluid" alt="project coming soon image">
                     <div class="portfolio-info">
