--- a/index.html
+++ b/index.html
@@ -838,6 +838,16 @@ $(this).addClass('filter-active');
     });
 </script>
 <!-------------------------------------END ANIMATION SCRIPTS-------------->
+<!-- firebase-----start------>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.2.10/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </div>
 </html>
