added user journey for projects and blogs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         gtag('config', 'UA-171690017-1');
     </script>
     <script src="js/scroll.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="img/mecircle.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/pranjay.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -184,7 +184,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <img id="pic" src="img/mecircle.png" class="mx-auto d-block" alt="Responsive image">
+                    <img id="pic" src="img/pranjay.png" class="mx-auto d-block" alt="Responsive image">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <h3>Profile </h3>
@@ -320,21 +320,21 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="count-box">
                         <i class="fas fa-award"></i>
-                        <span data-toggle="counter-up">15</span>
+                        <span data-toggle="counter-up">21</span>
                         <p>Certifications</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                     <div class="count-box">
                         <i class="fas fa-tasks"></i>
-                        <span data-toggle="counter-up">3</span>
+                        <span data-toggle="counter-up">8</span>
                         <p>Projects</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="fas fa-project-diagram"></i>
-                        <span data-toggle="counter-up">536</span>
+                        <span data-toggle="counter-up">821</span>
                         <p>Git-Commits</p>
                     </div>
                 </div>
@@ -428,14 +428,32 @@
                     </div>
                 </div>
             </div>
+
+            <div classs="container-fluid ">
+                <div class="row text-center">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <a href="./projects.html"><img class="project-blog grow" src="./img/projects.png"></a>
+                        <a href="./projects.html">
+                            <h3 class="project-blog-headings">Projects</h3>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <a href="./blogs.html"><img class="project-blog grow" src="./img/blogs.png"></a>
+                        <a href="./blogs.html">
+                            <h3 class="project-blog-headings">Blogs</h3>
+                        </a>
+                    </div>
+                </div>
+                <hr class="my-4">
+            </div>
         </div>
     </section>
 
     <!--Contacts Section-->
     <section class="contact" id="contact">
         <div class="container" data-aos-easing="ease-in-out">
-            <div class="section-title">
-                <h2> Contact </h2>
+            <div class="section-title ">
+                <h2 id="section-title2"> Contact </h2>
                 <p></p>
             </div>
             <div class="row mt-2">
