corrections in UI

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                     <h3>Profile </h3>
                     <p>I'am Pranjay Poddar , A second year CSE-CC UnderGrad Student In SRMIST, KTR-Chennai
                         <br>
-                        <br> I am a Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and Cloud Computing enthusiast. I love to work on projects belonging to web development Domain by using a wide-range of resources
-                        available on various data-sharing platforms.
+                        <br> I am a full stack Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and a Cloud Computing enthusiast. I like to work on projects related to web development field by using a wide-range
+                        of resources available on various data-sharing platforms.
                         <br><br> I cherrish collaborations on Github with people having interest in various Domains of the following Modules :</p>
                     <div class="row" id="list">
                         <div class="col-lg-6">
@@ -357,7 +357,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Experience</h2>
-                <p>Worked in various tech and non-tech clubs and team of SRM Institute Of Science And Technology KTR Chennai.
+                <p>Worked in various tech and non-tech clubs and teams of SRM Institute Of Science And Technology KTR Chennai.
                 </p>
             </div>
             <div class="row">
@@ -393,12 +393,7 @@
                         <p><i class="fas fa-caret-right"></i> TEAM SRMSAT</p>
                         <p>Worked in SRM Space Systems Laboratory as a Rocket Propulsion team member of Team SRMSAT.</p>
                     </div>
-                    <div class="experience-item">
-                        <h4>Graphic Designer</h4>
-                        <h5>July,2019-Feb,2020</h5>
-                        <p><i class="fas fa-caret-right"></i> IVENTOR'S</p>
-                        <p>Worked in Iventor's as a graphic designer and video editing intern.</p>
-                    </div>
+
                 </div>
                 <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <h3 class='experience-title'>Non-Tech Experience</h3>
