--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
-    <link rel="stylesheet" type="text/css" href="css/brands.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
     <!-- Start of Async Drift Code -->
@@ -426,13 +425,13 @@
 
             <div classs="container-fluid ">
                 <div class="row text-center">
-                    <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                         <a href="./projects.html"><img class="project-blog grow" src="./img/projects.png"></a>
                         <a href="./projects.html">
                             <h3 class="project-blog-headings">Projects</h3>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                         <a href="./blogs.html"><img class="project-blog grow" src="./img/blogs.png"></a>
                         <a href="./blogs.html">
                             <h3 class="project-blog-headings">Blogs</h3>
@@ -616,14 +615,8 @@
     </script>
     <!-------------------------------------END ANIMATION SCRIPTS-------------->
     <!-- firebase-----start------>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.2.10/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
-
-    <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
 </body>
 </div>
