--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item"><a class="nav-link" target="_blank" href="https://pranjay-graphics.netlify.app/">Graphics</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -425,16 +426,22 @@
 
             <div classs="container-fluid ">
                 <div class="row text-center">
-                    <div class="col-xs-12 col-sm-12 col-md-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                    <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                         <a href="./projects.html"><img class="project-blog grow" src="./img/projects.png"></a>
                         <a href="./projects.html">
                             <h3 class="project-blog-headings">Projects</h3>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                    <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                         <a href="./blogs.html"><img class="project-blog grow" src="./img/blogs.png"></a>
                         <a href="./blogs.html">
                             <h3 class="project-blog-headings">Blogs</h3>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                        <a href="https://pranjay-graphics.netlify.app/" target="_blank"><img class="project-blog grow" src="./img/graphics.png"></a>
+                        <a href="https://pranjay-graphics.netlify.app/" target="_blank">
+                            <h3 class="project-blog-headings">Graphic Designs</h3>
                         </a>
                     </div>
                 </div>
