--- a/public/blogs.html
+++ b/public/blogs.html
@@ -169,6 +169,21 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
+                        <div class="portfolio-wrap">
+                            <img src="blogs images/typescript.png" class="img-fluid" alt="blog image">
+                            <div class="portfolio-info">
+                                <h4>Property has no initializer and is not definitely assigned</h4>
+                                <p>A quick fix for the most frequent error faced by Angular Developers</p>
+                                <div class="portfolio-links">
+                                    <a href="blogs images/typescript.png" data-gall="portfolioGallery" class="venobox" title="Blog-2"><i class="fas fa-images"></i></a>
+                                    <a href="https://pranjaypoddar.medium.com/property-has-no-initializer-and-is-not-definitely-assigned-9fa6c2273f77" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- ------------------------ white papers ------------------------------------------------------->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-white">
                         <div class="portfolio-wrap">
                             <img src="blogs images/underdev.png" class="img-fluid" alt="white paper image">
