--- a/public/index.html
+++ b/public/index.html
@@ -451,14 +451,14 @@
                 <p></p>
             </div>
             <div class="row mt-2">
-                <div class="col-md-6 d-flex align-items-stretch">
+                <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="500" data-aos-easing="ease-in-out">
                     <div class="info-box">
                         <i class="fas fa-map-marked-alt"></i>
                         <h3>Address</h3>
                         <p>Chennai Tamil Nadu, India</p>
                     </div>
                 </div>
-                <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+                <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="500" data-aos-easing="ease-in-out">
                     <div class="info-box">
                         <i class="fas fa-share-alt"></i>
                         <h3>Social Profiles</h3>
@@ -473,14 +473,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mt-4 d-flex align-items-stretch">
+                <div class="col-md-6 mt-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
                     <div class="info-box">
                         <i class="fas fa-envelope"></i>
                         <h3>Email </h3>
                         <p>pranjaypoddar@gmail.com</p>
                     </div>
                 </div>
-                <div class="col-md-6 mt-4 d-flex align-items-stretch">
+                <div class="col-md-6 mt-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
                     <div class="info-box">
                         <i class="fas fa-phone-alt"></i>
                         <h3>Call </h3>
@@ -488,7 +488,7 @@
                     </div>
                 </div>
             </div>
-            <form action="https://formspree.io/xjvapybo" method="post" role="form" class="php-email-form mt-4">
+            <form data-aos="fade-left" data-aos-duration="900" data-aos-easing="ease-in-out" action="https://formspree.io/xjvapybo" method="post" role="form" class="php-email-form mt-4">
                 <div class="form-row">
                     <div class="col-md-6 form-group">
                         <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please Enter Your Name Here . Atleast 4 characters required" />
