updated projects and corrected contact dtyling in light mode

--- a/projects.html
+++ b/projects.html
@@ -321,6 +321,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/confusion.png" class="img-fluid" alt="Confusion Restaurant image">
+                            <div class="portfolio-info">
+                                <h4>Confusion Restaurant Website</h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/confusion.png" data-gall="portfolioGallery" class="venobox" title="Confusion Restaurant Website"><i class="fas fa-images"></i></a>
+                                    <a href="https://pranjay-poddar.github.io/Con_Fusion/index.html" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- c/c++ projects  -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-c">
                         <div class="portfolio-wrap">
